# SarthakSingh31.github.io

./: .gitignore  README.md  index.html  package-lock.json  package.json  svelte.config.js  vite-manifest.json
.github/workflows/: deploy.yaml
_app/: version.json
_app/immutable/: start-052d3746.js  start-16e312bb.js  start-2150a9e7.js  start-32b3accb.js  start-412e8278.js  start-58e6e443.js  start-59ae1749.js  start-5af1f7df.js  start-719bbacd.js
_app/immutable/assets/: _page-192caef4.css  _page-3e2886ae.css  _page-50fb2b49.css  _page-52198a63.css  _page-57fba28b.css  _page-ba00c132.css  _page-ebdc31f7.css
_app/immutable/chunks/: 0-0aecf08b.js  0-276b90a9.js  1-a45760cf.js  1-a8f70d72.js  2-0b34d6bb.js  2-171f80d0.js  2-72120788.js  2-b4ffc636.js  2-bf43a3b1.js  2-da657d77.js  2-e6cdda20.js  2-ecd93e6d.js  2-faf42691.js  index-53d8cde8.js  index-8f3be66c.js  singletons-070a06ab.js  singletons-42f86896.js
_app/immutable/components/: error.svelte-62771ea8.js  error.svelte-8af34464.js  layout.svelte-66c1fb0b.js  layout.svelte-dda78b0e.js
_app/immutable/components/pages/: _page.svelte-10655639.js  _page.svelte-29364b59.js  _page.svelte-59be722a.js  _page.svelte-6d555ab3.js  _page.svelte-a550d6e2.js  _page.svelte-bfe94873.js  _page.svelte-e8583237.js  _page.svelte-eb9d4dc2.js  _page.svelte-ff028f93.js
server/: Cargo.toml
server/src/: main.rs
src/: app.html  app.scss
src/lib/: about-me.svelte  contact-me.svelte  github-badge.svelte  intro.svelte  open-source.svelte  project-showcase.svelte  section-heading.svelte  top-nav.svelte
src/routes/: +page.svelte
