[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["headers"] }
axum-extra = { version = "0.4", features = ["spa"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.6", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "macros",
] }
tokio = { version = "1.24", features = ["macros"] }
toml = "0.5"
